# cpp-plugin-sample

./: .clang-format  .gitignore  Readme.md
Main/: CMakeLists.txt
Main/src/: Plugin.cpp  Plugin.hpp  main.cpp
Plugin/: CMakeLists.txt
Plugin/src/: myplugin.cpp  myplugin.hpp
